# AILS-NTUA-at-SemEval-2024-Task-9-Brainteaser

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml  requirements-encoders.txt  requirements-qlora.txt
assets/: README.md
data/: README.md  SP_eval_data_for_practice.npy  SP_test_answer.npy  SP_test_labeled.npy  WP_eval_data_for_practice.npy  WP_test_answer.npy  WP_test_labeled.npy
docs/: PAPER_RESULTS.md  REPRODUCING.md  USAGE.md
examples/: README.md  evaluate_random_baseline.py  inspect_triplets.py  load_and_inspect_data.py
model_training/: QLoRA_LLMs_finetuning_multiple_choice.ipynb  QLoRA_LLMs_finetuning_text_classification.ipynb  README.md  small_models_training_multiple_choice.ipynb  small_models_training_text_classification.ipynb
semeval2024_task9/: README.md  __init__.py
semeval2024_task9/cli/: __init__.py  evaluate.py  make_submission.py  train_encoder.py
semeval2024_task9/data/: README.md  __init__.py  loaders.py  preprocessing.py  simple_dataset.py  splits.py
semeval2024_task9/evaluation/: README.md  __init__.py  metrics.py  submission.py
semeval2024_task9/inference/: README.md  __init__.py  encoder_predict.py
semeval2024_task9/training/: README.md  __init__.py  encoder_binary.py  encoder_multichoice.py
tests/: conftest.py  test_encoder_smoke.py  test_loaders.py  test_metrics.py  test_splits.py  test_submission_parity.py
