[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semeval2024-task9"
version = "0.1.0"
description = "AILS-NTUA SemEval-2024 Task 9 BrainTeaser utilities"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Ioannis Panagiotopoulos" },
  { name = "Giorgos Filandrianos" },
  { name = "Maria Lymperaiou" },
  { name = "Giorgos Stamou" },
]
dependencies = [
  "numpy>=1.24,<2.0",
  "datasets>=2.14,<3",
]
keywords = ["semeval", "brainteaser", "lateral-thinking", "nlp", "transformers"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pyyaml>=6"]
hf = ["datasets>=2.14,<3"]
encoders = [
  "datasets==2.14.6",
  "torch>=2.0,<2.3",
  "transformers>=4.30,<4.40",
  "evaluate>=0.4,<0.5",
  "accelerate>=0.20,<0.28",
]
qlora = [
  "torch>=2.0,<2.3",
  "transformers==4.38.1",
  "bitsandbytes==0.42.0",
  "peft==0.8.2",
  "trl==0.7.10",
  "accelerate==0.27.1",
  "datasets==2.17.0",
  "sentence-transformers>=2.2,<3",
]

[project.urls]
Homepage = "https://github.com/GiannisPana/AILS-NTUA-at-SemEval-2024-Task-9-Brainteaser"
Paper = "https://aclanthology.org/2024.semeval-1.248/"
PDF = "https://aclanthology.org/2024.semeval-1.248.pdf"
Preprint = "https://arxiv.org/abs/2404.01084"

[project.scripts]
semeval2024-evaluate = "semeval2024_task9.cli.evaluate:main"
semeval2024-make-submission = "semeval2024_task9.cli.make_submission:main"
semeval2024-train-encoder = "semeval2024_task9.cli.train_encoder:main"

[tool.setuptools.packages.find]
include = ["semeval2024_task9*"]
